--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "superbets.bet": "gulp superbets.bet",
         "superbetsport.com": "gulp superbetsport.com",
         "trevodasorte.me": "gulp trevodasorte.me",
-        "esportbets.biz": "gulp esportbets.biz",
+        "esportbets.wee.bet": "gulp esportbets.wee.bet",
         "redblue.wee.bet": "gulp redblue.wee.bet",
         "apostapremiada.bet": "gulp apostapremiada.bet",
         "bet1.wee.bet": "gulp bet1.wee.bet",
