migration nacionalbet.club

--- a/package.json
+++ b/package.json
@@ -183,7 +183,7 @@
         "sortebet777.com": "gulp sortebet777.com",
         "fizabet.com": "gulp fizabet.com",
         "sorteesportiva.app": "gulp sorteesportiva.app",
-        "nacionalbet.online": "gulp nacionalbet.online",
+        "nacionalbet.club": "gulp nacionalbet.club",
         "iasports.wee.bet": "gulp iasports.wee.bet",
         "betplusbr.com": "gulp betplusbr.com",
         "ganhafacil.bet": "gulp ganhafacil.bet",
