--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "vipsports.wee.bet": "gulp vipsports.wee.bet",
         "betsbr.club": "gulp betsbr.club",
         "casadinha.com": "gulp casadinha.com",
+        "casadinha.bet": "gulp casadinha.bet",
         "demo.wee.bet": "gulp demo.wee.bet",
         "esportivatop.wee.bet": "gulp esportivatop.wee.bet",
         "eurosportbet.wee.bet": "gulp eurosportbet.wee.bet",
