Ajuste Rifa  * updates

--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,8 @@
                             "node_modules/@iconscout/unicons/css/line.css",
                             "node_modules/@fortawesome/fontawesome-free/css/all.css",
                             "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
-                            "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css"
+                            "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
+                            "node_modules/remixicon/fonts/remixicon.css"
                         ],
                         "scripts": [
                             "node_modules/jquery/dist/jquery.min.js",
