--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "allowJs": true,
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
     "paths": {
       "@/*": ["./src/*"]
     }
