--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "moment": "^2.30.1",
     "pinia": "^2.0.16",
+    "v-mask": "^2.3.0",
     "vue": "^2.7.7",
     "vue-router": "^3.5.4"
   },
