--- a/package.json
+++ b/package.json
@@ -230,8 +230,6 @@
         "pix777.bet": "gulp pix777.bet",
         "moneybets.net": "gulp moneybets.net",
         "ciaaonline.com": "gulp ciaaonline.com",
-        "fourbet.com": "gulp fourbet.com",
-        "fourbet.net": "gulp fourbet.net",
         "bnrbet.com": "gulp bnrbet.com",
         "valeno.bet": "gulp valeno.bet",
         "dentrodaaposta.com": "gulp dentrodaaposta.com",
@@ -243,7 +241,6 @@
         "smartbet.cash": "gulp smartbet.cash",
         "supertop3.bet": "gulp supertop3.bet",
         "bullbets.online": "gulp bullbets.online",
-        "betganha.vip": "gulp betganha.vip",
         "starbetfc.com": "gulp starbetfc.com",
         "betypix.bet": "gulp betypix.bet",
         "betpix3r.online": "gulp betpix3r.online",
@@ -310,7 +307,11 @@
         "portoalegre.bet": "gulp portoalegre.bet",
         "rio.bet": "gulp rio.bet",
         "riojogos.com": "gulp riojogos.com",
-        "gli.wee.bet": "gulp gli.wee.bet"
+        "gli.wee.bet": "gulp gli.wee.bet",
+        "deupix.bet": "gulp deupix.bet",
+        "balneario.bet": "gulp balneario.bet",
+        "caxias.bet": "gulp caxias.bet",
+        "floripa.bet": "gulp floripa.bet"
     },
     "private": true,
     "dependencies": {
