--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "chart.js": "^4.4.3",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "pinia": "^2.0.16",
     "vue": "^2.7.7",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/lodash": "^4.17.6",
     "@types/node": "^16.11.45",
     "@types/vue-the-mask": "^0.11.5",
     "@vitejs/plugin-legacy": "^2.0.0",
