feat: clear code

--- a/.env
+++ b/.env
@@ -1,6 +1,1 @@
-VITE_CLIENT_NAME='DEMO'
-VITE_CLIENT_SLUG='weebet.jm'
-VITE_CLIENT_LOGO='https://weebet.s3.amazonaws.com/demo.wee.bet/logos/logo_banca.png'
-VITE_API_URL='//localhost/api'
-VITE_LOKI_URL='//localhost:8000'
-VITE_CENTER_URL='https://hermes.wee.bet/v1'
+# VITE_API_URL=
