--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "chart.js": "^4.4.3",
+    "esc-pos-encoder": "^2.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "pinia": "^2.0.16",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/esc-pos-encoder": "^1.3.4",
     "@types/lodash": "^4.17.6",
     "@types/node": "^16.11.45",
     "@types/socket.io-client": "^1.4.32",
