--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "pinia": "^2.0.16",
