fix pipeline app

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -24,6 +24,7 @@ pipelines:
             - gulp prepare-build
             - flutter upgrade
             - flutter pub get
+            - flutter pub upgrade
             - flutter pub run flutter_launcher_icons:main
             - flutter pub run flutter_native_splash:create
             - flutter build apk --release
