ajuste flutter pipeline

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -22,9 +22,9 @@ pipelines:
           script:
             - npm install
             - gulp prepare-build
-            - flutter upgrade
+            # - flutter upgrade
             - flutter pub get
-            - flutter pub upgrade
+            # - flutter pub upgrade
             - flutter pub run flutter_launcher_icons:main
             - flutter pub run flutter_native_splash:create
             - flutter build apk --release --android-skip-build-dependency-validation
