--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,6 @@ dependencies:
   url_launcher: ^6.1.8
   share_plus: ^6.3.0
   flutter_native_splash: ^2.2.16
-  flutter_launcher_icons: ^0.11.0
   image: ^3.3.0
 
 dev_dependencies:
@@ -57,6 +56,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: "^0.11.0"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
