feat: upgrade arquive dependence

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   share_plus: ^6.3.0
   flutter_native_splash: ^2.2.16
   image: ^3.3.0
+  archive: ^3.3.7
 
 dev_dependencies:
   flutter_test:
