--- a/package.json
+++ b/package.json
@@ -308,7 +308,8 @@
         "mailing.bet": "gulp mailing.bet",
         "bocamafra.bet": "gulp bocamafra.bet",
         "sortte.bet": "gulp sortte.bet",
-        "megapix.bet": "gulp megapix.bet"
+        "megapix.bet": "gulp megapix.bet",
+        "pinbet.io": "gulp pinbet.io"
     },
     "private": true,
     "dependencies": {
