bullbets.online para bullbets.com.br

--- a/package.json
+++ b/package.json
@@ -223,7 +223,7 @@
         "mczbet.com": "gulp mczbet.com",
         "smartbet.cash": "gulp smartbet.cash",
         "supertop3.bet": "gulp supertop3.bet",
-        "bullbets.online": "gulp bullbets.online",
+        "bullbets.com.br": "gulp bullbets.com.br",
         "starbetfc.com": "gulp starbetfc.com",
         "betypix.bet": "gulp betypix.bet",
         "betpix3r.online": "gulp betpix3r.online",
