--- a/package.json
+++ b/package.json
@@ -78,7 +78,6 @@
         "dfsportsbet.wee.bet": "gulp dfsportsbet.wee.bet",
         "betpixbrasil.com": "gulp betpixbrasil.com",
         "betfacil123.app": "gulp betfacil123.app",
-        "bolanarede.wee.bet": "gulp bolanarede.wee.bet",
         "startbetbrasil.com": "gulp startbetbrasil.com",
         "goldeplaca.wee.bet": "gulp goldeplaca.wee.bet",
         "xbetsports.net": "gulp xbetsports.net",
@@ -157,7 +156,6 @@
         "fizabet.com": "gulp fizabet.com",
         "sorteesportiva.app": "gulp sorteesportiva.app",
         "nacionalbet.club": "gulp nacionalbet.club",
-        "iasports.wee.bet": "gulp iasports.wee.bet",
         "betplusbr.com": "gulp betplusbr.com",
         "futvale.net": "gulp futvale.net",
         "treinamento.wee.bet": "gulp treinamento.wee.bet",
@@ -193,7 +191,6 @@
         "suasortebet.com": "gulp suasortebet.com",
         "betsrio.online": "gulp betsrio.online",
         "rc.wee.bet": "gulp rc.wee.bet",
-        "exclusiva.bet": "gulp exclusiva.bet",
         "valebets.bet": "gulp valebets.bet",
         "jogateka.com": "gulp jogateka.com",
         "amazonsport.io": "gulp amazonsport.io",
@@ -266,9 +263,8 @@
         "avante.bet": "gulp avante.bet",
         "26sports.bet": "gulp 26sports.bet",
         "stargoldbet.app": "gulp stargoldbet.app",
-        "goalbet.com.br": "gulp goalbet.com.br",
+        "goalb.net": "gulp goalb.net",
         "sortegol.com": "gulp sortegol.com",
-        "prowin.bet": "gulp prowin.bet",
         "canela.bet": "gulp canela.bet",
         "curitiba.bet": "gulp curitiba.bet",
         "portoalegre.bet": "gulp portoalegre.bet",
@@ -280,17 +276,14 @@
         "caxias.bet": "gulp caxias.bet",
         "floripa.bet": "gulp floripa.bet",
         "appjetbet365.com": "gulp appjetbet365.com",
-        "amurel.bet": "gulp amurel.bet",
         "tourodasorte.bet": "gulp tourodasorte.bet",
         "decola.bet": "gulp decola.bet",
-        "bigdaybet.com": "gulp bigdaybet.com",
         "priv8bet.com": "gulp priv8bet.com",
         "betinha.com": "gulp betinha.com",
         "goldeplaca.online": "gulp goldeplaca.online",
         "puskasbet.com.br": "gulp puskasbet.com.br",
         "betagora.io": "gulp betagora.io",
         "tigre.bet": "gulp tigre.bet",
-        "mailing.bet": "gulp mailing.bet",
         "sortte.bet": "gulp sortte.bet",
         "megapix.bet": "gulp megapix.bet",
         "pinbet.io": "gulp pinbet.io",
