--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "esportbets.wee.bet": "gulp esportbets.wee.bet",
         "redblue.wee.bet": "gulp redblue.wee.bet",
         "apostapremiada.bet": "gulp apostapremiada.bet",
-        "bet1.wee.bet": "gulp bet1.wee.bet",
+        "mrsports.club": "gulp mrsports.club",
         "bet2.wee.bet": "gulp bet2.wee.bet",
         "bet4.wee.bet": "gulp bet4.wee.bet",
         "bet5.wee.bet": "gulp bet5.wee.bet",
