migration: esportebets.bet > esporte.fit

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
         "mastersports.wee.bet": "gulp mastersports.wee.bet",
         "megasports.club": "gulp megasports.club",
         "alfasports.net": "gulp alfasports.net",
-        "esportebets.bet": "gulp esportebets.bet",
+        "esporte.fit": "gulp esporte.fit",
         "sportbets7.net": "gulp sportbets7.net",
         "jrsports.bet": "gulp jrsports.bet",
         "apremiada.bet": "gulp apremiada.bet",
