--- a/package.json
+++ b/package.json
@@ -296,7 +296,8 @@
         "jjsports.vip": "gulp jjsports.vip",
         "footbet.bet": "gulp footbet.bet",
         "shelbybet.com.br": "gulp shelbybet.com.br",
-        "lostigre.com": "gulp lostigre.com"
+        "lostigre.com": "gulp lostigre.com",
+        "brabet.club": "gulp brabet.club"
     },
     "private": true,
     "dependencies": {
