--- a/package.json
+++ b/package.json
@@ -258,7 +258,7 @@
         "curitiba.bet": "gulp curitiba.bet",
         "portoalegre.bet": "gulp portoalegre.bet",
         "rio.bet": "gulp rio.bet",
-        "riojogos.com": "gulp riojogos.com",
+        "riojogos.bet": "gulp riojogos.bet",
         "gli.wee.bet": "gulp gli.wee.bet",
         "deupix.bet": "gulp deupix.bet",
         "balneario.bet": "gulp balneario.bet",
