--- a/package.json
+++ b/package.json
@@ -259,8 +259,7 @@
         "12bets.bet": "gulp 12bets.bet",
         "bettotal.bet": "gulp bettotal.bet",
         "topbets.site": "gulp topbets.site",
-        "via-bet.com": "gulp via-bet.com",
-        "amabet.bet": "gulp amabet.bet",
+=        "amabet.bet": "gulp amabet.bet",
         "jjsports.vip": "gulp jjsports.vip",
         "footbet.bet": "gulp footbet.bet",
         "shelbybet.com.br": "gulp shelbybet.com.br",
