--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
         "ccaesportes.club": "gulp ccaesportes.club",
         "lucromaster.net": "gulp lucromaster.net",
         "favelabett.com": "gulp favelabett.com",
-        "kwbet.bet": "gulp kwbet.bet",
+        "kwbet.net": "gulp kwbet.net",
         "vitoriasports.vip": "gulp vitoriasports.vip",
         "favoritao.com": "gulp favoritao.com",
         "085.bet": "gulp 085.bet",
