--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "esportbets.wee.bet": "gulp esportbets.wee.bet",
         "redblue.wee.bet": "gulp redblue.wee.bet",
         "apostapremiada.bet": "gulp apostapremiada.bet",
-        "mrsports.club": "gulp mrsports.club",
+        "bet1.wee.bet": "gulp bet1.wee.bet",
         "bet2.wee.bet": "gulp bet2.wee.bet",
         "bet4.wee.bet": "gulp bet4.wee.bet",
         "bet5.wee.bet": "gulp bet5.wee.bet",
@@ -161,7 +161,6 @@
         "ultrabetss.com": "gulp ultrabetss.com",
         "vegasbrasilbet.com": "gulp vegasbrasilbet.com",
         "palpitei.bet": "gulp palpitei.bet",
-        "winsport.vip": "gulp winsport.vip",
         "betbras.com": "gulp betbras.com",
         "capitalbets.bet": "gulp capitalbets.bet",
         "betinvestidor.com": "gulp betinvestidor.com",
@@ -209,7 +208,6 @@
         "superesportiva.com": "gulp superesportiva.com",
         "betstar.vip": "gulp betstar.vip",
         "multisports.bet": "gulp multisports.bet",
-        "betcampea.com": "gulp betcampea.com",
         "brinksbet.com": "gulp brinksbet.com",
         "betbastet.com": "gulp betbastet.com",
         "probetx1.com": "gulp probetx1.com",
