--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
         "lancebet.wee.bet": "gulp lancebet.wee.bet",
         "betsgol.bet": "gulp betsgol.bet",
         "dolarbets.wee.bet": "gulp dolarbets.wee.bet",
-        "slsports.wee.bet": "gulp slsports.wee.bet",
+        "slsports.bet": "gulp slsports.bet",
         "betdez.net": "gulp betdez.net",
         "resenhaesportiva.site": "gulp resenhaesportiva.site",
         "topbets.website": "gulp topbets.website",
