--- a/package.json
+++ b/package.json
@@ -254,7 +254,8 @@
         "playnabet.com": "gulp playnabet.com",
         "poc.wee.bet": "gulp poc.wee.bet",
         "bet10.bet": "gulp bet10.bet",
-        "pintou.bet": "gulp pintou.bet"
+        "pintou.bet": "gulp pintou.bet",
+        "boaaposta.com": "gulp boaaposta.com"
     },
     "private": true,
     "dependencies": {
