--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weebet-cambista",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite --port 7000",
+    "dev": "vite --port 7010",
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
     "build-only": "vite build",
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "chart.js": "^4.4.3",
     "esc-pos-encoder": "^2.1.0",
+    "html-to-image": "^1.11.11",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "pinia": "^2.0.16",
