--- a/package.json
+++ b/package.json
@@ -306,6 +306,7 @@
     "ngx-skeleton-loader": "^6.0.0",
     "ngx-toastr": "^16.2.0",
     "pdfmake": "^0.2.6",
+    "pwa-install-handler": "^2.6.2",
     "remixicon": "^4.2.0",
     "rxjs": "~6.6.0",
     "skeleton-screen-css": "^1.1.0",
