migration: migrating whitout database citybets.wee.bet

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "jrsports.bet": "gulp jrsports.bet",
     "apremiada.bet": "gulp apremiada.bet",
     "betsports.wee.bet": "gulp betsports.wee.bet",
-    "citybets.wee.bet": "gulp citybets.wee.bet",
+    "citybets.online": "gulp citybets.online",
     "lancebet.wee.bet": "gulp lancebet.wee.bet",
     "betsgol.bet": "gulp betsgol.bet",
     "dolarbets.wee.bet": "gulp dolarbets.wee.bet",
