migration: migrating whitout database bet5.wee.bet > totalsorte.com.br

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "bet1.wee.bet": "gulp bet1.wee.bet",
     "bet2.wee.bet": "gulp bet2.wee.bet",
     "bet4.wee.bet": "gulp bet4.wee.bet",
-    "bet5.wee.bet": "gulp bet5.wee.bet",
+    "totalsorte.com.br": "gulp totalsorte.com.br",
     "bet7.wee.bet": "gulp bet7.wee.bet",
     "bet9.wee.bet": "gulp bet9.wee.bet",
     "qa1.wee.bet": "gulp qa1.wee.bet",
