feat: adjust. geolocation state

--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "dolarbets.wee.bet": "gulp dolarbets.wee.bet",
     "slsports.bet": "gulp slsports.bet",
     "betdez.net": "gulp betdez.net",
-    "resenhaesportiva.site": "gulp resenhaesportiva.site",
     "topbets.website": "gulp topbets.website",
     "superbet365.bet": "gulp superbet365.bet",
     "moralbets.com": "gulp moralbets.com",
@@ -91,7 +90,6 @@
     "betminas.wee.bet": "gulp betminas.wee.bet",
     "sandbox.wee.bet": "gulp sandbox.wee.bet",
     "bet83.wee.bet": "gulp bet83.wee.bet",
-    "costabets.wee.bet": "gulp costabets.wee.bet",
     "betnordeste.net": "gulp betnordeste.net",
     "betboladavez.wee.bet": "gulp betboladavez.wee.bet",
     "iconebet.com": "gulp iconebet.com",
@@ -132,7 +130,6 @@
     "ragnar.bet": "gulp ragnar.bet",
     "cassinoaovivo.bet": "gulp cassinoaovivo.bet",
     "fizabet.com": "gulp fizabet.com",
-    "sorteesportiva.app": "gulp sorteesportiva.app",
     "nacionalbet.club": "gulp nacionalbet.club",
     "betplusbr.com": "gulp betplusbr.com",
     "futvale.net": "gulp futvale.net",
@@ -141,7 +138,6 @@
     "faithbets.bet": "gulp faithbets.bet",
     "sportilha.online": "gulp sportilha.online",
     "ccaesportes.club": "gulp ccaesportes.club",
-    "lucromaster.net": "gulp lucromaster.net",
     "favelabett.com": "gulp favelabett.com",
     "kwbet.net": "gulp kwbet.net",
     "vitoriasports.vip": "gulp vitoriasports.vip",
@@ -153,12 +149,10 @@
     "betbras.com": "gulp betbras.com",
     "capitalbets.bet": "gulp capitalbets.bet",
     "betinvestidor.com": "gulp betinvestidor.com",
-    "pbpixbet.com": "gulp pbpixbet.com",
     "pixcassino999.com": "gulp pixcassino999.com",
     "betsnordeste.bet": "gulp betsnordeste.bet",
     "suasortebet.com": "gulp suasortebet.com",
     "rc.wee.bet": "gulp rc.wee.bet",
-    "valebets.bet": "gulp valebets.bet",
     "jogateka.com": "gulp jogateka.com",
     "amazonsport.io": "gulp amazonsport.io",
     "federalsports.bet": "gulp federalsports.bet",
@@ -177,8 +171,6 @@
     "faturabet.com": "gulp faturabet.com",
     "supertop3.bet": "gulp supertop3.bet",
     "bullbets.com.br": "gulp bullbets.com.br",
-    "betypix.bet": "gulp betypix.bet",
-    "betpix3r.online": "gulp betpix3r.online",
     "apostaminas.com": "gulp apostaminas.com",
     "trevocassino.vip": "gulp trevocassino.vip",
     "beton.club": "gulp beton.club",
@@ -194,7 +186,6 @@
     "betbastet.com": "gulp betbastet.com",
     "probetx1.com": "gulp probetx1.com",
     "asortebets.com": "gulp asortebets.com",
-    "ativabet.bet": "gulp ativabet.bet",
     "proesporte.net": "gulp proesporte.net",
     "unibets.com.br": "gulp unibets.com.br",
     "zilionz.com": "gulp zilionz.com",
@@ -210,7 +201,6 @@
     "curitiba.bet": "gulp curitiba.bet",
     "portoalegre.bet": "gulp portoalegre.bet",
     "gli.wee.bet": "gulp gli.wee.bet",
-    "deupix.bet": "gulp deupix.bet",
     "balneario.bet": "gulp balneario.bet",
     "caxias.bet": "gulp caxias.bet",
     "floripa.bet": "gulp floripa.bet",
@@ -224,7 +214,6 @@
     "megapix.bet": "gulp megapix.bet",
     "pinbet.io": "gulp pinbet.io",
     "emirates365.bet": "gulp emirates365.bet",
-    "12bets.bet": "gulp 12bets.bet",
     "bettotal.bet": "gulp bettotal.bet",
     "topbets.site": "gulp topbets.site",
     "amabet.bet": "gulp amabet.bet",
@@ -252,7 +241,9 @@
     "jack77bet.com": "gulp jack77bet.com",
     "copasbet.bet": "gulp copasbet.bet",
     "boasorte.bet": "gulp boasorte.bet",
-    "eliteesportes.vip": "gulp eliteesportes.vip"
+    "eliteesportes.vip": "gulp eliteesportes.vip",
+    "pixmaster.bet": "gulp pixmaster.bet",
+    "joguefacil.bet": "gulp joguefacil.bet"
   },
   "private": true,
   "dependencies": {
