migration: jetbet365 > jetbet.net.br

--- a/package.json
+++ b/package.json
@@ -156,7 +156,7 @@
     "apostabrasil.com": "gulp apostabrasil.com",
     "lottomaster.bet": "gulp lottomaster.bet",
     "jbnacional.bet": "gulp jbnacional.bet",
-    "jetbet365.com": "gulp jetbet365.com",
+    "jetbet.net.br": "gulp jetbet.net.br",
     "pix777.bet": "gulp pix777.bet",
     "moneybets.net": "gulp moneybets.net",
     "bnrbet.com": "gulp bnrbet.com",
