--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "socket.io-client": "^2.1.1",
     "vue": "^2.7.7",
     "vue-chartjs": "^5.3.1",
+    "vue-lazyload": "^1.3.5",
     "vue-router": "^3.5.4",
     "vue-the-mask": "^0.11.1"
   },
