--- a/package.json
+++ b/package.json
@@ -221,7 +221,8 @@
     "betfortuna.com.br": "gulp betfortuna.com.br",
     "paraisobet.net": "gulp paraisobet.net",
     "betmania.casino": "gulp betmania.casino",
-    "buda-bet.com": "gulp buda-bet.com"
+    "buda-bet.com": "gulp buda-bet.com",
+    "zedocash.com": "gulp zedocash.com"
   },
   "private": true,
   "dependencies": {
