--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="bet.wee.app.weebet_mobile">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
    <application
         android:label="weebet_mobile"
         android:name="${applicationName}"
