--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,13 +39,20 @@ dependencies:
   webview_flutter: ^4.0.2
   permission_handler: ^10.2.0
   shared_preferences: ^2.0.17
-  bluetooth_thermal_printer: ^0.0.6
-  esc_pos_utils_plus: ^2.0.1+6
+  bluetooth_thermal_printer:
+    path: ./plugins/BluetoothThermalPrinter
+  esc_pos_utils_plus: ^2.0.3
   url_launcher: ^6.1.8
-  share_plus: ^6.3.0
-  flutter_native_splash: ^2.2.16
-  image: ^3.3.0
+  share_plus: ^10.1.4
+  flutter_native_splash: 
+    path: ./plugins/flutter_native_splash
+  image: ^4.3.0
   archive: ^3.3.7
+  path_provider_android: ^2.2.15
+  permission_handler_android: ^10.3.6
+  shared_preferences_android: ^2.4.5
+  url_launcher_android: ^6.3.14
+  webview_flutter_android: ^4.3.2
 
 dev_dependencies:
   flutter_test:
@@ -57,7 +64,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  flutter_launcher_icons: "^0.11.0"
+  flutter_launcher_icons: "^0.14.3"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
