--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,9 @@
+plugins {
+    id "com.android.application"
+    id "kotlin-android"
+    id "dev.flutter.flutter-gradle-plugin"
+}
+
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
@@ -21,15 +27,9 @@ if (flutterVersionName == null) {
     throw new GradleException("Flutter version name not defined. Define location with flutter.versionName in the local.properties file.")
 }
 
-plugins {
-    id "com.android.application"
-    id "kotlin-android"
-    id "dev.flutter.flutter-gradle-plugin"
-}
-
 android {
-    namespace = app.applicationId
-    compileSdk = flutter.compileSdkVersion
+    namespace = localProperties.getProperty('app.applicationId')
+    compileSdk = localProperties.getProperty('flutter.compileSdkVersion')toInteger()
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -43,13 +43,13 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = app.applicationId
+        applicationId = localProperties.getProperty('app.applicationId')
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        minSdk = localProperties.getProperty('flutter.minSdkVersion').toInteger()
+        targetSdk = localProperties.getProperty('flutter.targetSdkVersion').toInteger()
+        versionCode = flutterVersionCode
+        versionName = flutterVersionName
     }
 
     buildTypes {
