--- a/gulp/AndroidManifest.xml
+++ b/gulp/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="[PKG_NAME]">
    <application
         android:label="[NOME_BANCA]"
         android:name="${applicationName}"
