--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "esportbets.wee.bet": "gulp esportbets.wee.bet",
     "redblue.wee.bet": "gulp redblue.wee.bet",
     "apostapremiada.bet": "gulp apostapremiada.bet",
-    "bet1.wee.bet": "gulp bet1.wee.bet",
+    "mrsportsdigital.com": "gulp mrsportsdigital.com",
     "bet2.wee.bet": "gulp bet2.wee.bet",
     "bet4.wee.bet": "gulp bet4.wee.bet",
     "totalsorte.com.br": "gulp totalsorte.com.br",
@@ -108,7 +108,7 @@
     "imperiopix.bet": "gulp imperiopix.bet",
     "primoos.bet": "gulp primoos.bet",
     "realsport.wee.bet": "gulp realsport.wee.bet",
-    "pointbet.wee.bet": "gulp pointbet.wee.bet",
+    "pimplay.com": "gulp pimplay.com",
     "3tbet.com.br": "gulp 3tbet.com.br",
     "cassinomania.com": "gulp cassinomania.com",
     "betsmilionaria.com.br": "gulp betsmilionaria.com.br",
