migração rubinho sports

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "masterbet.wee.bet": "gulp masterbet.wee.bet",
     "vitoriasports.bet": "gulp vitoriasports.bet",
     "footbets.wee.bet": "gulp footbets.wee.bet",
-    "rubinhosports.wee.bet": "gulp rubinhosports.wee.bet",
+    "rblt.me": "gulp rblt.me",
     "esportebetsvip.com": "gulp esportebetsvip.com",
     "mastersports.wee.bet": "gulp mastersports.wee.bet",
     "megasports.club": "gulp megasports.club",
