--- a/package.json
+++ b/package.json
@@ -208,7 +208,8 @@
     "timedasorte.com": "gulp timedasorte.com",
     "bet1000.net.br": "gulp bet1000.net.br",
     "26sports.bet": "gulp 26sports.bet",
-    "vitoriasports.vip": "gulp vitoriasports.vip"
+    "vitoriasports.vip": "gulp vitoriasports.vip",
+    "dentrodaaposta.com": "gulp dentrodaaposta.com"
   },
   "private": true,
   "dependencies": {
