migration: pimplay.com > pinplay.bet

--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "imperiopix.bet": "gulp imperiopix.bet",
     "primoos.bet": "gulp primoos.bet",
     "realsport.wee.bet": "gulp realsport.wee.bet",
-    "pimplay.com": "gulp pimplay.com",
+    "pinplay.bet": "gulp pinplay.bet",
     "3tbet.com.br": "gulp 3tbet.com.br",
     "megasports.bet": "gulp megasports.bet",
     "81betpix.wee.bet": "gulp 81betpix.wee.bet",
