--- a/package.json
+++ b/package.json
@@ -209,7 +209,8 @@
     "bet1000.net.br": "gulp bet1000.net.br",
     "26sports.bet": "gulp 26sports.bet",
     "vitoriasports.vip": "gulp vitoriasports.vip",
-    "dentrodaaposta.com": "gulp dentrodaaposta.com"
+    "dentrodaaposta.com": "gulp dentrodaaposta.com",
+    "deubet.io": "gulp deubet.io"
   },
   "private": true,
   "dependencies": {
