--- a/package.json
+++ b/package.json
@@ -174,7 +174,7 @@
     "puskasbet.com.br": "gulp puskasbet.com.br",
     "betagora.io": "gulp betagora.io",
     "megapix.bet": "gulp megapix.bet",
-    "pinbet.io": "gulp pinbet.io",
+    "pinbet.bet": "gulp pinbet.bet",
     "emirates365.bet": "gulp emirates365.bet",
     "topbets.site": "gulp topbets.site",
     "amabet.bet": "gulp amabet.bet",
