--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "betsbr.club": "gulp betsbr.club",
     "casadinha.bet": "gulp casadinha.bet",
     "demo.wee.bet": "gulp demo.wee.bet",
-    "esportivatop.wee.bet": "gulp esportivatop.wee.bet",
+    "esportivatop.com": "gulp esportivatop.com",
     "major.wee.bet": "gulp major.wee.bet",
     "mjrsports.com": "gulp mjrsports.com",
     "sertaobets.com": "gulp sertaobets.com",
@@ -60,7 +60,7 @@
     "garanhunsbet.site": "gulp garanhunsbet.site",
     "cearabetsplacardarodada.wee.bet": "gulp cearabetsplacardarodada.wee.bet",
     "tubaraobet.wee.bet": "gulp tubaraobet.wee.bet",
-    "rrbets.wee.bet": "gulp rrbets.wee.bet",
+    "rrbets.site": "gulp rrbets.site",
     "techbet.wee.bet": "gulp techbet.wee.bet",
     "ligabet.wee.bet": "gulp ligabet.wee.bet",
     "trandbets.com": "gulp trandbets.com",
@@ -70,7 +70,7 @@
     "betfacil123.app": "gulp betfacil123.app",
     "goldeplaca.wee.bet": "gulp goldeplaca.wee.bet",
     "xbetsports.net": "gulp xbetsports.net",
-    "betsnordeste.wee.bet": "gulp betsnordeste.wee.bet",
+    "betsnordeste.site": "gulp betsnordeste.site",
     "esportebet.wee.bet": "gulp esportebet.wee.bet",
     "i2bets.com": "gulp i2bets.com",
     "lancesports.wee.bet": "gulp lancesports.wee.bet",
@@ -80,9 +80,9 @@
     "finasport.wee.bet": "gulp finasport.wee.bet",
     "aposta99.wee.bet": "gulp aposta99.wee.bet",
     "topbetgames.wee.bet": "gulp topbetgames.wee.bet",
-    "sm7.wee.bet": "gulp sm7.wee.bet",
+    "sm7.site": "gulp sm7.site",
     "futpix.wee.bet": "gulp futpix.wee.bet",
-    "betminas.wee.bet": "gulp betminas.wee.bet",
+    "betminas.club": "gulp betminas.club",
     "sandbox.wee.bet": "gulp sandbox.wee.bet",
     "bet83.wee.bet": "gulp bet83.wee.bet",
     "betnordeste.net": "gulp betnordeste.net",
