--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "superbets.bet": "gulp superbets.bet",
     "superbetsport.com": "gulp superbetsport.com",
     "trevodasorte.me": "gulp trevodasorte.me",
-    "esportbets.wee.bet": "gulp esportbets.wee.bet",
-    "redblue.wee.bet": "gulp redblue.wee.bet",
+    "esportbets.biz": "gulp esportbets.biz",
+    "redblue.bet": "gulp redblue.bet",
     "apostapremiada.bet": "gulp apostapremiada.bet",
     "mrsportsdigital.com": "gulp mrsportsdigital.com",
     "bet2.wee.bet": "gulp bet2.wee.bet",
@@ -35,10 +35,10 @@
     "topbets.me": "gulp topbets.me",
     "masterbet.wee.bet": "gulp masterbet.wee.bet",
     "vitoriasports.bet": "gulp vitoriasports.bet",
-    "footbets.wee.bet": "gulp footbets.wee.bet",
+    "footbets.net": "gulp footbets.net",
     "rblt.me": "gulp rblt.me",
     "esportebetsvip.com": "gulp esportebetsvip.com",
-    "mastersports.wee.bet": "gulp mastersports.wee.bet",
+    "mastersports.bet": "gulp mastersports.bet",
     "megasports.club": "gulp megasports.club",
     "alfasports.net": "gulp alfasports.net",
     "sportbets7.net": "gulp sportbets7.net",
@@ -47,16 +47,16 @@
     "citybets.online": "gulp citybets.online",
     "lancebet.wee.bet": "gulp lancebet.wee.bet",
     "betsgol.bet": "gulp betsgol.bet",
-    "dolarbets.wee.bet": "gulp dolarbets.wee.bet",
+    "dolarbets.com": "gulp dolarbets.com",
     "slsports.bet": "gulp slsports.bet",
     "betdez.net": "gulp betdez.net",
     "topbets.website": "gulp topbets.website",
     "superbet365.bet": "gulp superbet365.bet",
     "moralbets.com": "gulp moralbets.com",
     "globoesporte.bet": "gulp globoesporte.bet",
-    "chutebets.wee.bet": "gulp chutebets.wee.bet",
+    "chutebets.com.br": "gulp chutebets.com.br",
     "ingamesport.com": "gulp ingamesport.com",
-    "lbbet.wee.bet": "gulp lbbet.wee.bet",
+    "lbbet.com.br": "gulp lbbet.com.br",
     "garanhunsbet.site": "gulp garanhunsbet.site",
     "cearabetsplacardarodada.wee.bet": "gulp cearabetsplacardarodada.wee.bet",
     "tubaraobet.wee.bet": "gulp tubaraobet.wee.bet",
