--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "ingamesport.com": "gulp ingamesport.com",
     "lbbet.com.br": "gulp lbbet.com.br",
     "garanhunsbet.site": "gulp garanhunsbet.site",
-    "cearabetsplacardarodada.wee.bet": "gulp cearabetsplacardarodada.wee.bet",
+    "cearabetsplacardarodada.site": "gulp cearabetsplacardarodada.site",
     "tubaraobet.wee.bet": "gulp tubaraobet.wee.bet",
     "rrbets.site": "gulp rrbets.site",
     "techbet.wee.bet": "gulp techbet.wee.bet",
