--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "esportebet.wee.bet": "gulp esportebet.wee.bet",
     "i2bets.com": "gulp i2bets.com",
     "lancesports.wee.bet": "gulp lancesports.wee.bet",
-    "betimperativo.wee.bet": "gulp betimperativo.wee.bet",
+    "betimperativoo.com.br": "gulp betimperativoo.com.br",
     "rondobet.com": "gulp rondobet.com",
     "bets60.wee.bet": "gulp bets60.wee.bet",
     "finasport.wee.bet": "gulp finasport.wee.bet",
