--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "betsnordeste.site": "gulp betsnordeste.site",
     "esportebet.wee.bet": "gulp esportebet.wee.bet",
     "i2bets.com": "gulp i2bets.com",
-    "lancesports.wee.bet": "gulp lancesports.wee.bet",
+    "lancesports.site": "gulp lancesports.site",
     "betimperativoo.com.br": "gulp betimperativoo.com.br",
     "rondobet.com": "gulp rondobet.com",
     "bets60.wee.bet": "gulp bets60.wee.bet",
