--- a/package.json
+++ b/package.json
@@ -213,7 +213,7 @@
   },
   "private": true,
   "dependencies": {
-    "@abacritt/angularx-social-login": "^2.0.0",
+    "@abacritt/angularx-social-login": "2.1",
     "@angular/animations": "^16.2.12",
     "@angular/cdk": "^15.2.9",
     "@angular/common": "^16.2.12",
@@ -227,14 +227,13 @@
     "@angular/service-worker": "^16.2.12",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@iconscout/unicons": "^4.0.1",
-    "@ng-bootstrap/ng-bootstrap": "^14.2.0",
-    "@ngx-translate/core": "^14.0.0",
-    "@ngx-translate/http-loader": "^7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.0.0",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "@popperjs/core": "^2.11.8",
     "@swimlane/ngx-charts": "^20.1.0",
-    "@techiediaries/ngx-qrcode": "^9.1.0",
-    "angular-code-input": "^1.6.0",
-    "angular-svg-icon": "^7.2.0",
+    "angular-code-input": "^2.0.0",
+    "angular-svg-icon": "^16.1.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^3.9.1",
@@ -250,16 +249,16 @@
     "lodash.range": "^3.2.0",
     "moment": "^2.22.0",
     "moment-timezone": "^0.5.13",
-    "ng-hcaptcha": "2.1.x",
-    "ng-recaptcha": "^11.0.0",
+    "ng-hcaptcha": "2.4.x",
+    "ng-qrcode": "^16.0.0",
+    "ng-recaptcha": "^12.0.0",
     "ng2-charts": "^3.1.2",
-    "ng2-search-filter": "^0.5.1",
     "ngx-clipboard": "^15.1.0",
-    "ngx-currency": "^2.5.3",
-    "ngx-mask": "^7.7.0",
-    "ngx-owl-carousel-o": "^15.0.1",
+    "ngx-currency": "^4.0.0",
+    "ngx-mask": "^16.4.2",
+    "ngx-owl-carousel-o": "^16.0.0",
     "ngx-pagination": "^6.0.3",
-    "ngx-print": "~1.2.1",
+    "ngx-print": "1.4",
     "ngx-skeleton-loader": "^6.0.0",
     "ngx-toastr": "^16.2.0",
     "pdfmake": "^0.2.6",
