--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "apremiada.bet": "gulp apremiada.bet",
     "betsports.wee.bet": "gulp betsports.wee.bet",
     "citybets.online": "gulp citybets.online",
-    "lancebet.wee.bet": "gulp lancebet.wee.bet",
+    "lancet.club": "gulp lancet.club",
     "betsgol.bet": "gulp betsgol.bet",
     "dolarbets.com": "gulp dolarbets.com",
     "slsports.bet": "gulp slsports.bet",
@@ -63,7 +63,7 @@
     "ligabet.click": "gulp ligabet.click",
     "ilhabet.net": "gulp ilhabet.net",
     "starbets.online": "gulp starbets.online",
-    "dfsportsbet.wee.bet": "gulp dfsportsbet.wee.bet",
+    "dfsgoo.com": "gulp dfsgoo.com",
     "betfacil123.app": "gulp betfacil123.app",
     "goldeplaca.wee.bet": "gulp goldeplaca.wee.bet",
     "xbetsports.net": "gulp xbetsports.net",
@@ -75,7 +75,7 @@
     "rondobet.com": "gulp rondobet.com",
     "bets60.wee.bet": "gulp bets60.wee.bet",
     "finasport.wee.bet": "gulp finasport.wee.bet",
-    "aposta99.wee.bet": "gulp aposta99.wee.bet",
+    "aposta99.com.br": "gulp aposta99.com.br",
     "topbetgames.net": "gulp topbetgames.net",
     "sm7.site": "gulp sm7.site",
     "futpix.online": "gulp futpix.online",
@@ -89,7 +89,7 @@
     "betsmania.live": "gulp betsmania.live",
     "ricardo.wee.bet": "gulp ricardo.wee.bet",
     "nautsports.club": "gulp nautsports.club",
-    "bet73.wee.bet": "gulp bet73.wee.bet",
+    "bet73.site": "gulp bet73.site",
     "onbets.club": "gulp onbets.club",
     "cr7bet.online": "gulp cr7bet.online",
     "easybets.club": "gulp easybets.club",
@@ -101,7 +101,7 @@
     "megasporte.com": "gulp megasporte.com",
     "imperiopix.bet": "gulp imperiopix.bet",
     "primoos.bet": "gulp primoos.bet",
-    "realsport.wee.bet": "gulp realsport.wee.bet",
+    "realgol.net": "gulp realgol.net",
     "pinplay.bet": "gulp pinplay.bet",
     "3tbet.com.br": "gulp 3tbet.com.br",
     "megasports.bet": "gulp megasports.bet",
