--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "alfasports.net": "gulp alfasports.net",
     "sportbets7.net": "gulp sportbets7.net",
     "apremiada.bet": "gulp apremiada.bet",
-    "betsports.wee.bet": "gulp betsports.wee.bet",
+    "sportss.vip": "gulp sportss.vip",
     "citybets.online": "gulp citybets.online",
     "lancet.club": "gulp lancet.club",
     "betsgol.bet": "gulp betsgol.bet",
